--- a/src/enlightenment-breathing.html
+++ b/src/enlightenment-breathing.html
@@ -8,15 +8,16 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
-            color: #e6e6e6;
-            font-family: 'Georgia', serif;
+            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%);
+            color: #f0f0f0;
+            font-family: 'Courier New', monospace;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: center;
+            text-shadow: 0 0 10px rgba(255,255,255,0.3);
         }
 
         .container {
