--- a/src/enlightenment-breathing.html
+++ b/src/enlightenment-breathing.html
@@ -8,8 +8,8 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #2a2a2a 100%);
-            color: #f0f0f0;
+            background: linear-gradient(135deg, #000000 0%, #111111 50%, #222222 100%);
+            color: #e0e0e0;
             font-family: 'Courier New', monospace;
             min-height: 100vh;
             display: flex;
@@ -17,7 +17,9 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            text-shadow: 0 0 10px rgba(255,255,255,0.3);
+            text-shadow: 0 0 15px rgba(0, 255, 255, 0.4);
+            border: 1px solid #00ffff;
+            box-shadow: inset 0 0 50px rgba(0, 255, 255, 0.1);
         }
 
         .container {
@@ -41,24 +43,27 @@
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            background: radial-gradient(circle, #4a90e2 0%, #357abd 100%);
+            background: radial-gradient(circle, #ff00ff 0%, #cc00cc 100%);
             margin: 2rem auto;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
             transition: all 4s ease-in-out;
-            box-shadow: 0 0 50px rgba(74, 144, 226, 0.3);
+            box-shadow: 0 0 80px rgba(255, 0, 255, 0.5);
+            border: 2px solid #00ffff;
         }
 
         .breathing-circle.expanding {
             transform: scale(1.5);
-            background: radial-gradient(circle, #5da8ff 0%, #4a90e2 100%);
+            background: radial-gradient(circle, #ff66ff 0%, #ff00ff 100%);
+            box-shadow: 0 0 120px rgba(255, 0, 255, 0.8);
         }
 
         .breathing-circle.contracting {
             transform: scale(0.8);
-            background: radial-gradient(circle, #357abd 0%, #2c5aa0 100%);
+            background: radial-gradient(circle, #990099 0%, #660066 100%);
+            box-shadow: 0 0 40px rgba(255, 0, 255, 0.3);
         }
 
         .breath-text {
@@ -73,20 +78,23 @@
         }
 
         button {
-            background: rgba(255,255,255,0.1);
-            border: 2px solid rgba(255,255,255,0.3);
-            color: white;
+            background: rgba(0, 255, 255, 0.1);
+            border: 2px solid #00ffff;
+            color: #00ffff;
             padding: 0.8rem 2rem;
             font-size: 1rem;
             border-radius: 50px;
             cursor: pointer;
             transition: all 0.3s ease;
             backdrop-filter: blur(10px);
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
         }
 
         button:hover {
-            background: rgba(255,255,255,0.2);
-            border-color: rgba(255,255,255,0.5);
+            background: rgba(0, 255, 255, 0.3);
+            border-color: #ffff00;
+            color: #ffff00;
+            text-shadow: 0 0 10px rgba(255, 255, 0, 0.7);
         }
 
         .instructions {
