--- a/src/enlightenment-breathing.html
+++ b/src/enlightenment-breathing.html
@@ -8,8 +8,8 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #000000 0%, #111111 50%, #222222 100%);
-            color: #e0e0e0;
+            background: linear-gradient(180deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
+            color: #00ffff;
             font-family: 'Courier New', monospace;
             min-height: 100vh;
             display: flex;
@@ -17,60 +17,111 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            text-shadow: 0 0 15px rgba(0, 255, 255, 0.4);
-            border: 1px solid #00ffff;
-            box-shadow: inset 0 0 50px rgba(0, 255, 255, 0.1);
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.6);
+            position: relative;
+            overflow: hidden;
+        }
+
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: repeating-linear-gradient(
+                0deg,
+                transparent,
+                transparent 2px,
+                rgba(0, 255, 255, 0.03) 2px,
+                rgba(0, 255, 255, 0.03) 4px
+            );
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        body::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at center, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+            pointer-events: none;
+            z-index: 2;
         }
 
         .container {
             max-width: 800px;
             padding: 2rem;
+            position: relative;
+            z-index: 3;
+            border: 2px solid #ff00ff;
+            box-shadow: 0 0 30px rgba(255, 0, 255, 0.5), inset 0 0 30px rgba(0, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
         }
 
         .quote {
             font-size: 1.8rem;
             line-height: 1.4;
             margin-bottom: 3rem;
-            text-shadow: 0 2px 10px rgba(0,0,0,0.5);
+            text-shadow: 0 0 15px rgba(0, 255, 255, 0.9), 0 0 30px rgba(0, 255, 255, 0.6);
+            letter-spacing: 2px;
         }
 
         .quote-line {
             margin-bottom: 1rem;
             opacity: 0.9;
+            animation: flicker 2s infinite;
+        }
+
+        .quote-line:nth-child(2) {
+            animation-delay: 1s;
+        }
+
+        @keyframes flicker {
+            0%, 100% { opacity: 0.9; }
+            50% { opacity: 0.7; }
         }
 
         .breathing-circle {
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            background: radial-gradient(circle, #ff00ff 0%, #cc00cc 100%);
+            background: radial-gradient(circle, #ff00ff 0%, #990099 100%);
             margin: 2rem auto;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
             transition: all 4s ease-in-out;
-            box-shadow: 0 0 80px rgba(255, 0, 255, 0.5);
-            border: 2px solid #00ffff;
+            box-shadow: 0 0 80px rgba(255, 0, 255, 0.8), 0 0 120px rgba(255, 0, 255, 0.4);
+            border: 3px solid #00ffff;
+            filter: brightness(1.2);
         }
 
         .breathing-circle.expanding {
             transform: scale(1.5);
             background: radial-gradient(circle, #ff66ff 0%, #ff00ff 100%);
-            box-shadow: 0 0 120px rgba(255, 0, 255, 0.8);
+            box-shadow: 0 0 120px rgba(255, 0, 255, 1), 0 0 180px rgba(255, 0, 255, 0.6);
+            filter: brightness(1.5);
         }
 
         .breathing-circle.contracting {
             transform: scale(0.8);
             background: radial-gradient(circle, #990099 0%, #660066 100%);
-            box-shadow: 0 0 40px rgba(255, 0, 255, 0.3);
+            box-shadow: 0 0 40px rgba(255, 0, 255, 0.5), 0 0 80px rgba(255, 0, 255, 0.3);
+            filter: brightness(0.9);
         }
 
         .breath-text {
             font-size: 1.5rem;
             font-weight: bold;
             color: white;
-            text-shadow: 0 2px 10px rgba(0,0,0,0.7);
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.9), 0 0 30px rgba(255, 0, 255, 0.8);
+            letter-spacing: 3px;
         }
 
         .controls {
@@ -79,29 +130,41 @@
 
         button {
             background: rgba(0, 255, 255, 0.1);
-            border: 2px solid #00ffff;
+            border: 3px solid #00ffff;
             color: #00ffff;
             padding: 0.8rem 2rem;
             font-size: 1rem;
-            border-radius: 50px;
+            border-radius: 5px;
             cursor: pointer;
             transition: all 0.3s ease;
             backdrop-filter: blur(10px);
-            text-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.9);
+            font-family: 'Courier New', monospace;
+            font-weight: bold;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5), inset 0 0 20px rgba(0, 255, 255, 0.1);
         }
 
         button:hover {
             background: rgba(0, 255, 255, 0.3);
             border-color: #ffff00;
             color: #ffff00;
-            text-shadow: 0 0 10px rgba(255, 255, 0, 0.7);
+            text-shadow: 0 0 10px rgba(255, 255, 0, 0.9);
+            box-shadow: 0 0 30px rgba(255, 255, 0, 0.7), inset 0 0 30px rgba(255, 255, 0, 0.2);
+            transform: scale(1.05);
+        }
+
+        button:active {
+            transform: scale(0.95);
         }
 
         .instructions {
             margin-top: 2rem;
             font-size: 1.1rem;
             line-height: 1.6;
-            opacity: 0.8;
+            opacity: 0.9;
+            text-shadow: 0 0 10px rgba(0, 255, 255, 0.7);
         }
 
         .wood-water-icons {
@@ -109,16 +172,18 @@
             justify-content: center;
             gap: 3rem;
             margin: 2rem 0;
-            opacity: 0.7;
+            opacity: 0.8;
         }
 
         .icon {
             font-size: 3rem;
             animation: float 3s ease-in-out infinite;
+            filter: drop-shadow(0 0 10px rgba(255, 0, 255, 0.8));
         }
 
         .icon:nth-child(2) {
             animation-delay: 1.5s;
+            filter: drop-shadow(0 0 10px rgba(0, 255, 255, 0.8));
         }
 
         @keyframes float {
@@ -128,6 +193,8 @@
 
         .pulse {
             animation: pulse 2s ease-in-out infinite;
+            color: #ffff00;
+            text-shadow: 0 0 15px rgba(255, 255, 0, 0.9);
         }
 
         @keyframes pulse {
