--- a/src/enlightenment-breathing.html
+++ b/src/enlightenment-breathing.html
@@ -8,8 +8,8 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(180deg, #0a0a0a 0%, #1a1a2e 50%, #16213e 100%);
-            color: #00ffff;
+            background: linear-gradient(180deg, #000000 0%, #1a1a1a 50%, #2a2a2a 100%);
+            color: #e0e0e0;
             font-family: 'Courier New', monospace;
             min-height: 100vh;
             display: flex;
@@ -17,7 +17,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            text-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.6);
+            text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
             position: relative;
             overflow: hidden;
         }
