--- a/src/enlightenment-breathing.html
+++ b/src/enlightenment-breathing.html
@@ -8,8 +8,8 @@
         body {
             margin: 0;
             padding: 0;
-            background: linear-gradient(180deg, #000000 0%, #1a1a1a 50%, #2a2a2a 100%);
-            color: #e0e0e0;
+            background: #0a0a0a;
+            color: #d4d4d4;
             font-family: 'Courier New', monospace;
             min-height: 100vh;
             display: flex;
@@ -17,9 +17,9 @@
             align-items: center;
             justify-content: center;
             text-align: center;
-            text-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
             position: relative;
             overflow: hidden;
+            background: radial-gradient(circle at center, #1a1a1a 0%, #0a0a0a 70%);
         }
 
         body::before {
@@ -32,9 +32,9 @@
             background: repeating-linear-gradient(
                 0deg,
                 transparent,
-                transparent 2px,
-                rgba(0, 255, 255, 0.03) 2px,
-                rgba(0, 255, 255, 0.03) 4px
+                transparent 1px,
+                rgba(128, 0, 0, 0.1) 1px,
+                rgba(128, 0, 0, 0.1) 2px
             );
             pointer-events: none;
             z-index: 1;
@@ -47,7 +47,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: radial-gradient(circle at center, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+            background: radial-gradient(circle at center, rgba(139, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.9) 100%);
             pointer-events: none;
             z-index: 2;
         }
@@ -57,18 +57,19 @@
             padding: 2rem;
             position: relative;
             z-index: 3;
-            border: 2px solid #ff00ff;
-            box-shadow: 0 0 30px rgba(255, 0, 255, 0.5), inset 0 0 30px rgba(0, 255, 255, 0.1);
-            background: rgba(0, 0, 0, 0.7);
-            border-radius: 10px;
+            border: 2px solid #8b0000;
+            box-shadow: 0 0 30px rgba(139, 0, 0, 0.3), inset 0 0 30px rgba(139, 0, 0, 0.1);
+            background: rgba(10, 10, 10, 0.9);
+            border-radius: 0;
         }
 
         .quote {
             font-size: 1.8rem;
             line-height: 1.4;
             margin-bottom: 3rem;
-            text-shadow: 0 0 15px rgba(0, 255, 255, 0.9), 0 0 30px rgba(0, 255, 255, 0.6);
-            letter-spacing: 2px;
+            text-shadow: 0 0 8px rgba(139, 0, 0, 0.7);
+            letter-spacing: 1px;
+            color: #e8e8e8;
         }
 
         .quote-line {
@@ -89,39 +90,39 @@
         .breathing-circle {
             width: 200px;
             height: 200px;
-            border-radius: 50%;
-            background: radial-gradient(circle, #ff00ff 0%, #990099 100%);
+            border-radius: 0;
+            background: radial-gradient(circle, #8b0000 0%, #450000 100%);
             margin: 2rem auto;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
             transition: all 4s ease-in-out;
-            box-shadow: 0 0 80px rgba(255, 0, 255, 0.8), 0 0 120px rgba(255, 0, 255, 0.4);
-            border: 3px solid #00ffff;
-            filter: brightness(1.2);
+            box-shadow: 0 0 40px rgba(139, 0, 0, 0.6);
+            border: 2px solid #d4d4d4;
+            filter: brightness(1.1);
         }
 
         .breathing-circle.expanding {
             transform: scale(1.5);
-            background: radial-gradient(circle, #ff66ff 0%, #ff00ff 100%);
-            box-shadow: 0 0 120px rgba(255, 0, 255, 1), 0 0 180px rgba(255, 0, 255, 0.6);
-            filter: brightness(1.5);
+            background: radial-gradient(circle, #cd5c5c 0%, #8b0000 100%);
+            box-shadow: 0 0 80px rgba(139, 0, 0, 0.8);
+            filter: brightness(1.3);
         }
 
         .breathing-circle.contracting {
             transform: scale(0.8);
-            background: radial-gradient(circle, #990099 0%, #660066 100%);
-            box-shadow: 0 0 40px rgba(255, 0, 255, 0.5), 0 0 80px rgba(255, 0, 255, 0.3);
-            filter: brightness(0.9);
+            background: radial-gradient(circle, #450000 0%, #2a0000 100%);
+            box-shadow: 0 0 20px rgba(139, 0, 0, 0.4);
+            filter: brightness(0.8);
         }
 
         .breath-text {
             font-size: 1.5rem;
             font-weight: bold;
-            color: white;
-            text-shadow: 0 0 15px rgba(255, 255, 255, 0.9), 0 0 30px rgba(255, 0, 255, 0.8);
-            letter-spacing: 3px;
+            color: #d4d4d4;
+            text-shadow: 0 0 8px rgba(139, 0, 0, 0.7);
+            letter-spacing: 1px;
         }
 
         .controls {
@@ -129,30 +130,29 @@
         }
 
         button {
-            background: rgba(0, 255, 255, 0.1);
-            border: 3px solid #00ffff;
-            color: #00ffff;
+            background: rgba(139, 0, 0, 0.1);
+            border: 2px solid #8b0000;
+            color: #d4d4d4;
             padding: 0.8rem 2rem;
             font-size: 1rem;
-            border-radius: 5px;
+            border-radius: 0;
             cursor: pointer;
             transition: all 0.3s ease;
-            backdrop-filter: blur(10px);
-            text-shadow: 0 0 10px rgba(0, 255, 255, 0.9);
+            text-shadow: 0 0 5px rgba(139, 0, 0, 0.7);
             font-family: 'Courier New', monospace;
             font-weight: bold;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
             text-transform: uppercase;
-            box-shadow: 0 0 20px rgba(0, 255, 255, 0.5), inset 0 0 20px rgba(0, 255, 255, 0.1);
+            box-shadow: 0 0 10px rgba(139, 0, 0, 0.3);
         }
 
         button:hover {
-            background: rgba(0, 255, 255, 0.3);
-            border-color: #ffff00;
-            color: #ffff00;
-            text-shadow: 0 0 10px rgba(255, 255, 0, 0.9);
-            box-shadow: 0 0 30px rgba(255, 255, 0, 0.7), inset 0 0 30px rgba(255, 255, 0, 0.2);
-            transform: scale(1.05);
+            background: rgba(139, 0, 0, 0.3);
+            border-color: #cd5c5c;
+            color: #ffffff;
+            text-shadow: 0 0 8px rgba(205, 92, 92, 0.8);
+            box-shadow: 0 0 20px rgba(205, 92, 92, 0.5);
+            transform: scale(1.02);
         }
 
         button:active {
