refactor: rename serena logs to agent logging, remove broken status indicator

--- a/gui/dashboard.html
+++ b/gui/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serena Logs - Bot Sportello</title>
+    <title>Agent Logging - Bot Sportello</title>
     <link rel="icon" type="image/jpeg" href="../default.jpg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap');
@@ -142,7 +142,7 @@
         <div class="brand">
             <a href="/" style="color: #00ffff; text-decoration: none; margin-right: 15px; font-size: 1.5em;">&#x1F400;</a>
             <img src="../default.jpg" alt="Bot Sportello" class="logo-thumb" />
-            <div class="title">Serena Logs</div>
+            <div class="title">Agent Logging</div>
         </div>
         <div class="status">
             <div class="status-item">
