--- a/index.html
+++ b/index.html
@@ -248,29 +248,6 @@
             box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
             transform: translateY(-2px);
         }
-        .status-dot {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background: #ff4444;
-            box-shadow: 0 0 8px #ff4444;
-            transition: all 0.3s ease;
-        }
-        .status-dot.connected {
-            background: #00ff41;
-            box-shadow: 0 0 8px #00ff41, 0 0 16px rgba(0, 255, 65, 0.4);
-            animation: pulse-green 2s infinite;
-        }
-        @keyframes pulse-green {
-            0%, 100% { box-shadow: 0 0 8px #00ff41, 0 0 16px rgba(0, 255, 65, 0.4); }
-            50% { box-shadow: 0 0 12px #00ff41, 0 0 24px rgba(0, 255, 65, 0.6); }
-        }
-        .status-text {
-            font-size: 0.75rem;
-            color: rgba(126, 200, 227, 0.7);
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
         @media (max-width: 768px) {
             body {
                 padding: 24px 16px 90px;
@@ -289,11 +266,7 @@
             <h1><img src="default.jpg" alt="Bot Sportello" class="header-logo"> Bot Sportello's Arcade</h1>
             <p class="subtitle">Noir arcade experiments deployed live from Discord</p>
             <p class="sync-hint">Add a new page, run <code>/sync-index</code>, and it shows up here automatically.</p>
-            <a href="/dashboard" class="dashboard-btn" id="dashboard-btn">
-                <span class="status-dot" id="status-dot"></span>
-                <span>AGENT DASHBOARD</span>
-                <span class="status-text" id="status-text">checking...</span>
-            </a>
+            <a href="/dashboard" class="dashboard-btn" id="dashboard-btn">AGENT DASHBOARD</a>
         </div>
 
         <p class="status-line" id="status-line">Syncing latest project metadata…</p>
@@ -522,31 +495,6 @@
 
         loadProjects();
 
-        // Bot status checker
-        const statusDot = document.getElementById('status-dot');
-        const statusText = document.getElementById('status-text');
-
-        async function checkBotStatus() {
-            try {
-                const response = await fetch('/api/status', {
-                    method: 'GET',
-                    cache: 'no-store'
-                });
-                if (response.ok) {
-                    const data = await response.json();
-                    statusDot.classList.add('connected');
-                    statusText.textContent = data.running ? 'online' : 'idle';
-                } else {
-                    throw new Error('Not available');
-                }
-            } catch (e) {
-                statusDot.classList.remove('connected');
-                statusText.textContent = 'offline';
-            }
-        }
-
-        checkBotStatus();
-        setInterval(checkBotStatus, 1000000);
     </script>
 </body>
 </html>
