--- a/src/agentic-visualization.html
+++ b/src/agentic-visualization.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="agentic-visualization.css">
 </head>
 <body>
+    <a class="home-link" href="../index.html"></a>
     <div id="canvas"></div>
     <div id="controls">
         <button id="force-layout">Force</button>
