--- a/index.html
+++ b/index.html
@@ -102,22 +102,6 @@
             padding-bottom: 8px;
             margin-bottom: 20px;
         }
-        .collection-controls {
-            display: inline-flex;
-            gap: 8px;
-            align-items: center;
-        }
-        .toggle-btn {
-            border: 1px solid rgba(126, 200, 227, 0.5);
-            background: rgba(10, 10, 10, 0.9);
-            color: #7ec8e3;
-            font-family: 'Courier Prime', monospace;
-            font-size: 0.8rem;
-            padding: 6px 10px;
-            cursor: pointer;
-            letter-spacing: 0.5px;
-        }
-        .toggle-btn:hover { background: rgba(0, 255, 255, 0.1); border-color: #00ffff; }
         .collection-title {
             font-size: 1.4rem;
             color: #ff0000;
@@ -131,31 +115,6 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
             gap: 18px;
-        }
-        .collection-accordion {
-            margin-top: 18px;
-            border: 1px solid rgba(126, 200, 227, 0.35);
-            background: rgba(6, 6, 6, 0.85);
-        }
-        .collection-accordion summary {
-            cursor: pointer;
-            padding: 12px 16px;
-            font-size: 0.9rem;
-            letter-spacing: 0.5px;
-            color: #00ffff;
-            list-style: none;
-        }
-        .collection-accordion summary::-webkit-details-marker { display: none; }
-        .collection-accordion summary::before {
-            content: '▸';
-            margin-right: 8px;
-            color: #ff0000;
-            transition: transform 160ms ease;
-        }
-        .collection-accordion[open] summary::before { transform: rotate(90deg); }
-        .collection-accordion .projects-grid {
-            padding: 16px;
-            border-top: 1px solid rgba(126, 200, 227, 0.2);
         }
         .collection-featured .projects-grid {
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -176,9 +135,6 @@
             border-width: 2px;
             background: rgba(24, 0, 0, 0.75);
         }
-        .collection.collapsed .projects-grid { display: none; }
-        .collection.collapsed .collection-accordion { display: none; }
-        .collection.collapsed .collection-description { opacity: 0.75; }
         .project-card:hover {
             transform: translateY(-6px);
             border-color: #ff0000;
@@ -308,6 +264,26 @@
             padding: 40px;
             font-size: 0.9rem;
         }
+        /* Random display system */
+        .hidden-item { display: none !important; }
+        .expand-btn {
+            width: 100%;
+            margin-top: 12px;
+            padding: 12px;
+            background: rgba(10, 10, 10, 0.9);
+            border: 1px dashed rgba(126, 200, 227, 0.5);
+            color: #00ffff;
+            cursor: pointer;
+            font-family: 'Courier Prime', monospace;
+            font-size: 0.9rem;
+            letter-spacing: 0.5px;
+            transition: all 0.2s ease;
+        }
+        .expand-btn:hover {
+            border-color: #00ffff;
+            background: rgba(0, 255, 255, 0.1);
+            box-shadow: 0 0 12px rgba(0, 255, 255, 0.2);
+        }
     </style>
 </head>
 <body>
@@ -320,10 +296,6 @@
         </div>
 
         <p class="status-line" id="status-line">Syncing latest project metadata…</p>
-        <div class="collection-controls" style="margin: 8px 0 16px;">
-            <button class="toggle-btn" id="expand-all">Expand All</button>
-            <button class="toggle-btn" id="collapse-all">Collapse All</button>
-        </div>
         <div id="collections"></div>
 
         <!-- AI Gallery Section -->
@@ -338,6 +310,13 @@
 
     <script src="stars.js" defer></script>
     <script>
+        // ========== DISPLAY CONFIG (easy to change) ==========
+        const DISPLAY_CONFIG = {
+            itemsPerCategory: 8,  // How many items to show per category
+            shuffleOnLoad: true   // Set false for alphabetical order
+        };
+        // =====================================================
+
         const statusLine = document.getElementById('status-line');
         const collectionsContainer = document.getElementById('collections');
 
@@ -375,37 +354,16 @@
             return card;
         }
 
-        const COLLAPSE_STATE_KEY = 'arcade.collectionCollapse';
-        function loadCollapseState() {
-            try { return JSON.parse(localStorage.getItem(COLLAPSE_STATE_KEY) || '{}'); } catch { return {}; }
-        }
-        function saveCollapseState(state) {
-            try { localStorage.setItem(COLLAPSE_STATE_KEY, JSON.stringify(state)); } catch {}
-        }
-
-        function applySectionState(section, id, state) {
-            const collapsed = !!state[id];
-            section.classList.toggle('collapsed', collapsed);
-            const btn = section.querySelector('.toggle-btn');
-            if (btn) {
-                btn.textContent = collapsed ? 'Expand' : 'Collapse';
-                btn.setAttribute('aria-expanded', String(!collapsed));
-            }
-        }
-
         function renderCollections(data) {
             const collections = data.collections || {};
             const projects = data.projects || {};
             const grouped = {};
 
+            // Group projects by collection
             Object.entries(projects).forEach(([slug, project]) => {
-                if (project.hidden) {
-                    return;
-                }
+                if (project.hidden) return;
                 const collectionId = collections[project.collection] ? project.collection : 'unsorted';
-                if (!grouped[collectionId]) {
-                    grouped[collectionId] = [];
-                }
+                if (!grouped[collectionId]) grouped[collectionId] = [];
                 grouped[collectionId].push({ slug, ...project });
             });
 
@@ -414,13 +372,15 @@
 
             let totalProjects = 0;
 
-            const collapseState = loadCollapseState();
             orderedCollections.forEach(([id, meta]) => {
-                const items = grouped[id] || [];
-                if (!items.length) {
-                    return;
-                }
-                totalProjects += items.length;
+                const rawItems = grouped[id] || [];
+                if (!rawItems.length) return;
+                totalProjects += rawItems.length;
+
+                // Shuffle or sort based on config
+                const items = DISPLAY_CONFIG.shuffleOnLoad
+                    ? [...rawItems].sort(() => Math.random() - 0.5)
+                    : [...rawItems].sort((a, b) => (a.title || a.slug).localeCompare(b.title || b.slug));
 
                 const section = document.createElement('section');
                 section.className = `collection ${id === 'featured' ? 'collection-featured' : ''}`;
@@ -437,104 +397,44 @@
                 description.className = 'collection-description';
                 description.textContent = meta.description || '';
 
-                const controls = document.createElement('div');
-                controls.className = 'collection-controls';
-                const toggle = document.createElement('button');
-                toggle.className = 'toggle-btn';
-                toggle.type = 'button';
-                toggle.addEventListener('click', () => {
-                    const state = loadCollapseState();
-                    const isCollapsed = section.classList.toggle('collapsed');
-                    state[id] = isCollapsed ? true : undefined;
-                    if (!state[id]) delete state[id];
-                    saveCollapseState(state);
-                    toggle.textContent = isCollapsed ? 'Expand' : 'Collapse';
-                    toggle.setAttribute('aria-expanded', String(!isCollapsed));
-                });
-                controls.appendChild(toggle);
-
                 header.appendChild(title);
                 header.appendChild(description);
-                header.appendChild(controls);
 
                 const grid = document.createElement('div');
                 grid.className = 'projects-grid';
 
-                // Randomly sample items for fair visibility, keeping overflow alphabetically sorted
-                const cardLimit = Number.isFinite(meta.cardLimit) ? meta.cardLimit : 8;
-                const shuffled = [...items].sort(() => Math.random() - 0.5);
-                const visibleItems = shuffled.slice(0, cardLimit).sort((a, b) => (a.title || a.slug).localeCompare(b.title || b.slug));
-                const overflowItems = shuffled.slice(cardLimit).sort((a, b) => (a.title || a.slug).localeCompare(b.title || b.slug));
-
-                visibleItems.forEach(item => {
-                    grid.appendChild(createProjectCard(item.slug, item));
+                // Render all cards, hide extras beyond limit
+                items.forEach((item, index) => {
+                    const card = createProjectCard(item.slug, item);
+                    if (index >= DISPLAY_CONFIG.itemsPerCategory) {
+                        card.classList.add('hidden-item');
+                    }
+                    grid.appendChild(card);
                 });
 
                 section.appendChild(header);
                 section.appendChild(grid);
 
-                if (overflowItems.length) {
-                    const accordion = document.createElement('details');
-                    accordion.className = 'collection-accordion';
-
-                    const summary = document.createElement('summary');
-                    summary.textContent = `Show ${overflowItems.length} more`;
-                    accordion.appendChild(summary);
-
-                    const overflowGrid = document.createElement('div');
-                    overflowGrid.className = 'projects-grid';
-                    overflowItems.forEach(item => {
-                        overflowGrid.appendChild(createProjectCard(item.slug, item));
-                    });
-                    accordion.appendChild(overflowGrid);
-                    section.appendChild(accordion);
+                // Add expand button if there are hidden items
+                const hiddenCount = Math.max(0, items.length - DISPLAY_CONFIG.itemsPerCategory);
+                if (hiddenCount > 0) {
+                    const expandBtn = document.createElement('button');
+                    expandBtn.className = 'expand-btn';
+                    expandBtn.textContent = `Show ${hiddenCount} more`;
+                    expandBtn.onclick = () => {
+                        grid.querySelectorAll('.hidden-item').forEach(el => el.classList.remove('hidden-item'));
+                        expandBtn.remove();
+                    };
+                    section.appendChild(expandBtn);
                 }
+
                 collectionsContainer.appendChild(section);
-
-                // Initial state: collapse all except 'featured' on first load
-                if (!(id in collapseState) && id !== 'featured') {
-                    collapseState[id] = true;
-                }
-                applySectionState(section, id, collapseState);
             });
 
             if (!totalProjects) {
                 statusLine.textContent = 'No projects found. Run /sync-index after shipping something new.';
             } else {
                 statusLine.textContent = `Showing ${totalProjects} deployed projects.`;
-            }
-
-            // Wire global controls
-            const expandAllBtn = document.getElementById('expand-all');
-            const collapseAllBtn = document.getElementById('collapse-all');
-            if (expandAllBtn && collapseAllBtn) {
-                expandAllBtn.onclick = () => {
-                    const state = {};
-                    document.querySelectorAll('.collection').forEach(section => {
-                        const id = section.dataset.collection;
-                        section.classList.remove('collapsed');
-                        const btn = section.querySelector('.toggle-btn');
-                        if (btn) { btn.textContent = 'Collapse'; btn.setAttribute('aria-expanded', 'true'); }
-                    });
-                    document.querySelectorAll('.collection-accordion').forEach(accordion => {
-                        accordion.open = true;
-                    });
-                    saveCollapseState(state);
-                };
-                collapseAllBtn.onclick = () => {
-                    const state = {};
-                    document.querySelectorAll('.collection').forEach(section => {
-                        const id = section.dataset.collection;
-                        if (id !== 'featured') { state[id] = true; }
-                        section.classList.toggle('collapsed', id !== 'featured');
-                        const btn = section.querySelector('.toggle-btn');
-                        if (btn) { btn.textContent = (id !== 'featured') ? 'Expand' : 'Collapse'; btn.setAttribute('aria-expanded', String(id === 'featured')); }
-                    });
-                    document.querySelectorAll('.collection-accordion').forEach(accordion => {
-                        accordion.open = false;
-                    });
-                    saveCollapseState(state);
-                };
             }
         }
 
