update confabuletition: change hallucination references to confabulation

--- a/src/Confabuletition/index.html
+++ b/src/Confabuletition/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Confabuletition | AG001: repetition as "hallucination"</title>
+  <title>Confabuletition | AG001: repetition as "confabulation"</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
@@ -417,7 +417,7 @@ body.invert{
   <a class="skip" href="#controls">Skip to controls</a>
 
   <header class="frame" aria-label="Framing">
-    <h1>AG001: repetition as "hallucination"</h1>
+    <h1>AG001: repetition as "confabulation"</h1>
     <p>
       The sentence repeats until it becomes a system behavior. Streams fall, copy, and slightly corrupt
       themselves. The interface keeps the phrase present while showing what repetition does to it.
@@ -449,8 +449,8 @@ body.invert{
       ></div>
 
       <div class="stageBottom">
-        <div class="meter" aria-label="Hallucination meter">
-          <span class="small">Hallucination</span>
+        <div class="meter" aria-label="Confabulation meter">
+          <span class="small">Confabulation</span>
           <div class="bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
             <div class="fill" id="hallucFill"></div>
           </div>
